--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "real-time-data-long-polling",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "sever.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": {
     "name": "Lucas Teles",
     "email": "dev.teles@outlook.com"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
